--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,3 +64,20 @@ jobs:
           service: ${{secrets.AWS_ECS_SERVICE_NAME}}
           cluster: ${{secrets.AWS_ECS_CLUSTER_NAME}}
           wait-for-service-stability: true
+
+       cleanup:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4.0.1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Delete resources
+        run: |
+          # Use AWS CLI commands or other tools to delete resources
+          aws ecs delete-service --cluster ${{ secrets.AWS_ECS_CLUSTER_NAME }} --service ${{ secrets.AWS_ECS_SERVICE_NAME }}
+          # Add more cleanup commands as needed
